<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/qrButtonLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/accessBackgroundColor"
    tools:context=".QRCodeButton">

    <TextView
        android:id="@+id/scanErrorMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/login_error_message_rectangle"
        android:drawableLeft="@drawable/no_symbol"
        android:drawablePadding="@dimen/error_symbol_padding"
        android:padding="@dimen/error_symbol_padding"
        android:text="@string/scan_error"
        android:textColor="@color/darkText"
        android:textSize="@dimen/smaller_text_size"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/accessAppBarColor"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonLogOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/gradient_button"
        android:text="@string/log_out"
        android:textColor="@color/textOnDarkBackground"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conversant_access_title"
        android:textColor="@color/textOnDarkBackground"
        android:textSize="@dimen/generalFontSize"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toStartOf="@+id/toolbar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <ImageView
        android:id="@+id/circleBurst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:src="@drawable/circle_burst_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scanErrorMessage" />

    <ImageView
        android:id="@+id/circleBurstRed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:src="@drawable/circle_burst_red"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <ImageView
        android:id="@+id/qrSymbol"
        android:layout_width="105dp"
        android:layout_height="94dp"
        android:src="@drawable/qr_rect"
        app:layout_constraintBottom_toBottomOf="@+id/circleBurst"
        app:layout_constraintEnd_toEndOf="@+id/circleBurst"
        app:layout_constraintStart_toStartOf="@+id/circleBurst"
        app:layout_constraintTop_toTopOf="@+id/circleBurst" />

    <ImageView
        android:id="@+id/warningSymbol"
        android:layout_width="105dp"
        android:layout_height="94dp"
        android:src="@drawable/warning_triangle"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/circleBurstRed"
        app:layout_constraintEnd_toEndOf="@+id/circleBurstRed"
        app:layout_constraintStart_toStartOf="@+id/circleBurstRed"
        app:layout_constraintTop_toTopOf="@+id/circleBurstRed" />

    <TextView
        android:id="@+id/scanQRString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/scan_qr_code"
        android:textColor="@color/buttonGradientTop"
        android:textSize="@dimen/generalFontSize"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circleBurst" />

    <TextView
        android:id="@+id/errorScanMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/failed_qr_code"
        android:textColor="@color/red"
        android:textSize="@dimen/generalFontSize"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circleBurstRed" />
</androidx.constraintlayout.widget.ConstraintLayout>